# fip100-analysis

./: Network_Storage_Capacity.csv  README.md  counterfactual.py  exponential.py  linear.py  main.py  pyproject.toml
